Minor z-index bug fixed

--- a/src/scss/navigation.scss
+++ b/src/scss/navigation.scss
@@ -108,7 +108,7 @@ a.node-button {
 }
 
 .gridster-item-resizable-handler {
-    z-index: 50000;
+    z-index: 5000000;
 }
 
 .menu-mover {
